# nonebot_plugin_tarot

./: .pre-commit-config.yaml  How-to-add-new-tarot-theme.md  README.md  data_source.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: dependabot.yml  poetry-publish.yml  python-publish.yml  release-drafter.yml
nonebot_plugin_tarot/: __init__.py  config.py  data_source.py  t.py  tarot.json  test.py
nonebot_plugin_tarot/resource/: tarot.json
tests/: conftest.py  test_tarot.py
